--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,11 @@
 <p>
   home works!
-  <button (click)="loadData()">Load Data</button>
+  <button (click)="loadData(0)">Load First Data</button>
+  <button (click)="loadData(1)">Load Second Data</button>
+  <button (click)="loadData(2)">Load Third Data</button>
 </p>
 <ul>
-  <li *ngFor="let data of data">
-    {{data.title}}
+  <li>
+    {{data?.title}}
   </li>
 </ul>
