Observables for stream data

--- a/src/app/messaging/subscriber/subscriber.component.html
+++ b/src/app/messaging/subscriber/subscriber.component.html
@@ -2,5 +2,7 @@
 <input type="text" [(ngModel)]="message">
 <button (click)="sendMessage()">Send</button>
 <ul>
-  <li style="list-style: none;" *ngFor="let msg of messageHistory.reverse()"><span style="color: Blue">{{msg.name}}</span>: {{msg.message}}</li>
+  <li style="list-style: none;" *ngFor="let msg of messageHistory.reverse()">
+    <span [ngClass]="{green: msg.name==='Ritesh', red: msg.name==='Vipin'}">{{msg.name}}</span>: {{msg.message}}
+  </li>
 </ul>
