Pipes and child route

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,8 @@
-<p>
-  about works!
-</p>
+<h3>About</h3>
+<nav class="navbar">
+  <ul class="nav">
+    <li class="active mr-5"><a routerLink="about-company">About Company</a></li>
+    <li class="mr-5"><a routerLink="about-employee">About Employee</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
