--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
+<h3>Home Page</h3>
 <p>
-  home works!
   <button (click)="loadData(0)">Load First Data</button>
   <button (click)="loadData(1)">Load Second Data</button>
   <button (click)="loadData(2)">Load Third Data</button>
@@ -11,3 +11,9 @@
 </ul>
 Current Time: 
 {{currentTime}}
+<p>
+Square Root of 36 :- {{36 | squareroot}}
+</p>
+<p>
+  2 power 5:- {{2 | powerof: 5}}
+</p>
